--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -63,7 +63,7 @@ body{
   -webkit-text-fill-color: transparent;
   background-clip: text;
   font-weight: bold;
-  font-family: 'Cinzel', serif;
+  font-family: 'Cinzel', serif !important;
   
 }
 
@@ -133,7 +133,7 @@ body{
 
 .hero-buttons {
   display: flex;
-  margin-top: 20px;
+  margin-top: 3rem;
   gap: 20px;
   align-self: center;
   justify-content: center;
@@ -290,6 +290,7 @@ body{
 
 .hero-divider{
   margin-top: 4rem;
+  font-family: 'Rochester', cursive;
   display: flex;
   display: block;
 }
@@ -312,17 +313,17 @@ body{
 }
 
 .welcome-text p{
-  font-size: 1.5rem;
-  margin-top: 25px;
+  font-size: 1.3rem;
+  margin-top: 15px;
 }
 
 .welcome-text .punch-line{
-  font-size: 2rem;
+  font-size: 1.7rem;
   background: linear-gradient(to right, #ff0000, #3b6cff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  margin-top: 8px;
+  margin-top: 12px;
 }
 
 
