--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
   </head>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <body>
@@ -22,7 +23,7 @@
           <p class="punch-line">Understanding code has never been easier.</p>
           <p>Powered by AI, Clarifai helps you understand your code by generating comments and also through graphical representations of Abstract Syntax Trees and Control Flow Graphs.</p>
         </div>
-        <div class="hero-buttons mt-4">
+        <div class="hero-buttons">
           <a href="#how-it-works" class="how-btn">How it works?</a>
           <a href="{{ url_for('main.model_page') }}" class="try-btn">Try it now</a>
         </div>
