--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -112,6 +112,13 @@ body{
   }
 }
 
+@media (min-width: 1500px) {
+  .hero-content {
+    max-width: 1000px;
+    margin-top: 20px;
+  }
+}
+
 .clarifai-text-main h1 {
   font-size: 7rem;
   margin-top: 20px;
@@ -134,7 +141,7 @@ body{
 .hero-buttons {
   display: flex;
   margin-top: 3rem;
-  gap: 20px;
+  gap: 25px;
   align-self: center;
   justify-content: center;
   flex-wrap: wrap; /* Allow wrapping on smaller screens */
@@ -300,6 +307,12 @@ body{
   color: rgba(154, 24, 24, 0.808);
 }
 
+@media (min-width: 1500px) {
+  .hero-divider h2 {
+    font-size: 4.4rem; /* or whatever size you prefer */
+  }
+}
+
 .welcome-text{
   text-align: left;
 }
@@ -308,6 +321,7 @@ body{
   font-size: 3rem;
 }
 
+
 .welcome-text h3{
   font-size: 2.5rem;
 }
@@ -315,6 +329,12 @@ body{
 .welcome-text p{
   font-size: 1.3rem;
   margin-top: 15px;
+}
+
+@media (min-width: 1500px) {
+  .welcome-text p {
+    font-size: 1.7rem; /* or whatever size you prefer */
+  }
 }
 
 .welcome-text .punch-line{
@@ -326,6 +346,11 @@ body{
   margin-top: 12px;
 }
 
+@media (min-width: 1500px) {
+  .welcome-text .punch-line {
+    font-size: 2.1rem; /* or whatever size you prefer */
+  }
+}
 
 
 /* Form Styling */
