--- a/src/components/ASTVisualization.css
+++ b/src/components/ASTVisualization.css
@@ -28,8 +28,9 @@
 }
 
 .comment-tooltip-content {
-  font-size: 14px;
-  line-height: 1.4;
+  /* Font size and line-height are set dynamically via inline styles to scale with zoom */
+  font-weight: normal !important;
+  font-family: 'Gill Sans', sans-serif;
 }
 
 .comment-tooltip-close {
