--- a/src/components/ASTVisualization.css
+++ b/src/components/ASTVisualization.css
@@ -18,19 +18,21 @@
 }
 
 .comment-tooltip {
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Lexend', sans-serif;
+  font-weight: normal;
 }
 
 .comment-tooltip-header {
   color: #3b6cff;
   border-bottom: 1px solid var(--border-color);
   padding-bottom: 5px;
+  font-family: 'Lexend', sans-serif;
 }
 
 .comment-tooltip-content {
   /* Font size and line-height are set dynamically via inline styles to scale with zoom */
   font-weight: normal !important;
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Lexend', sans-serif;
 }
 
 .comment-tooltip-close {
